--- a/views/gpo.html
+++ b/views/gpo.html
@@ -63,7 +63,7 @@
 
 						const data = [];
 						let htmlOutput = '<h2 class="govuk-heading-l">' + $('#reportSelect')
-						.val() +
+							.val() +
 							'</h2>';
 						htmlOutput += '<table class="govuk-table">';
 						htmlOutput += '<thead class="govuk-table__head">';
@@ -114,10 +114,10 @@
 							// htmlOutput += `</td><td class="govuk-table__cell">${description}</td>`;
 
 							htmlOutput += '</tr>';
-							userDetails = [displayName, owner, domainName, creationTime,
+							const userObj = [displayName, owner, domainName, creationTime,
 								modificationTime, gpoStatus, description
 							];
-							data.push(userDetails);
+							data.push(userObj);
 
 							totalCount++;
 						}
@@ -157,7 +157,7 @@
 </head>
 
 <body>
-	<header class="govuk-header" role="banner" data-module="govuk-header">
+	<header class="govuk-header" data-module="govuk-header">
 		<div class="govuk-header__container govuk-width-container">
 			<div class="govuk-header__logo">
 				<a href="#" class="govuk-header__link govuk-header__link--homepage">
@@ -229,7 +229,7 @@
 	<div class="govuk-!-padding-bottom-3"></div>
 
 	<div class="govuk-form-group">
-		<label class="govuk-label" for="sort">
+		<label class="govuk-label" for="reportSelect">
 			Select a Report
 		</label>
 		<select class="govuk-select" id="reportSelect" name="reportSelect">
@@ -239,7 +239,7 @@
 	</div>
 
 	<div id="daysFilter" class="govuk-form-group">
-		<label class="govuk-label" for="width-3">
+		<label class="govuk-label" for="daysSelect">
 			Days to filter on
 		</label>
 		<input class="govuk-input govuk-input--width-3" id="daysSelect" name="daysSelect" type="text" value="90">
@@ -249,8 +249,8 @@
 		Run Report
 	</button>
 
-	<div class="textAlignCenter" id="loading" name="loading">
-		<img src="/assets/images/loading.gif" />
+	<div class="textAlignCenter" id="loading">
+		<img src="/assets/images/loading.gif" alt="Loading indicator" />
 	</div>
 
 	<div id="report"></div>
@@ -258,7 +258,7 @@
 
 	<div class="govuk-form-group" id="saveCSVDiv">
 		<button id="saveCSVButton" class="govuk-button" data-module="govuk-button">Export to CSV</button>
-		<a download="report.txt" class="govuk-link" id="downloadlink">Download</a>
+		<a href="#" download="report.txt" class="govuk-link" id="downloadlink">Download</a>
 	</div>
 
 	<div w3-include-html="footer"></div>
