--- a/views/scheduling.html
+++ b/views/scheduling.html
@@ -52,7 +52,7 @@
 </head>
 
 <body>
-  <header class="govuk-header " role="banner" data-module="govuk-header">
+  <header class="govuk-header" data-module="govuk-header">
     <div class="govuk-header__container govuk-width-container">
       <div class="govuk-header__logo">
         <a href="#" class="govuk-header__link govuk-header__link--homepage">
@@ -158,7 +158,7 @@
         </select>
 
         <div id="daysFilter" class="govuk-form-group">
-          <label class="govuk-label" for="width-3">
+          <label class="govuk-label" for="daysSelect">
             Days to filter on
           </label>
           <input class="govuk-input govuk-input--width-3" id="daysSelect" name="daysSelect" type="text" value="30">
