--- a/views/index.html
+++ b/views/index.html
@@ -13,6 +13,7 @@
       $('#computerReportSelectButton').hide();
       $('#gpoReportSelectButton').hide();
       $('#schedulingSelectButton').hide();
+      $('img').hide();
 
       $('#submit').click(function () {
         const validateResult = validate();
@@ -142,7 +143,7 @@
 </head>
 
 <body>
-  <header class="govuk-header" role="banner" data-module="govuk-header">
+  <header class="govuk-header" data-module="govuk-header">
     <div class="govuk-header__container govuk-width-container">
       <div class="govuk-header__logo">
         <a href="#" class="govuk-header__link govuk-header__link--homepage">
@@ -236,7 +237,7 @@
   </div>
 
   <div class="textAlignCenter">
-    <img src="/assets/images/loading.gif" />
+    <img src="/assets/images/loading.gif" alt="Loading indicator" />
   </div>
   <div id="message"></div>
   <div id="save"></div>
