--- a/views/reports.html
+++ b/views/reports.html
@@ -62,7 +62,7 @@
 						const userDetails = ['Username', 'distinguishedName', 'objectGuid',
 							'badLogonCount', 'created', 'deleted', 'enabled', 'lockedOut',
 							'passwordLastSet', 'passwordExpired', 'passwordNeverExpires',
-							'Last Logon', 'Membe of'
+							'Last Logon', 'Member of'
 						];
 
 						data.push(userDetails);
@@ -135,11 +135,12 @@
 							htmlOutput += `</td><td class="govuk-table__cell">${logon}</td>`;
 							// htmlOutput += `</td><td class="govuk-table__cell"><div class="govuk-checkboxes"><div class="govuk-checkboxes__item"><input class="govuk-checkboxes__input" type="checkbox" id="${userId}" name="${userId}" value="${SamAccountName}"><label class="govuk-label govuk-checkboxes__label" for="${SamAccountName}"></label></td>`;
 							htmlOutput += '</tr>';
-							userDetails = [username, distinguishedName, objectGuid, badLogonCount,
+							const userObject = [username, distinguishedName, objectGuid,
+								badLogonCount,
 								created, deleted, enabled, lockedOut, passwordLastSet,
 								passwordExpired, passwordNeverExpires, logon, memberOf
 							];
-							data.push(userDetails);
+							data.push(userObject);
 						}
 						htmlOutput += `<tr><td>User Count =  ${userCount}</td></tr>`;
 						htmlOutput += `<tr><td>Took ${queryTime} seconds</td></tr>`;
@@ -203,7 +204,7 @@
 </head>
 
 <body>
-	<header class="govuk-header" role="banner" data-module="govuk-header">
+	<header class="govuk-header" data-module="govuk-header">
 		<div class="govuk-header__container govuk-width-container">
 			<div class="govuk-header__logo">
 				<a href="#" class="govuk-header__link govuk-header__link--homepage">
@@ -275,7 +276,7 @@
 	<div class="govuk-!-padding-bottom-3"></div>
 
 	<div class="govuk-form-group">
-		<label class="govuk-label" for="sort">
+		<label class="govuk-label" for="reportSelect">
 			Select a Report
 		</label>
 		<select class="govuk-select" id="reportSelect" name="reportSelect">
@@ -304,7 +305,7 @@
 	</div>
 
 	<div id="daysFilter" class="govuk-form-group">
-		<label class="govuk-label" for="width-3">
+		<label class="govuk-label" for="daysSelect">
 			Days to filter on
 		</label>
 		<input class="govuk-input govuk-input--width-3" id="daysSelect" name="daysSelect" type="text" value="30">
@@ -326,8 +327,8 @@
 		Run Report
 	</button>
 
-	<div class="textAlignCenter" id="loading" name="loading">
-		<img src="/assets/images/loading.gif" />
+	<div class="textAlignCenter" id="loading">
+		<img src="/assets/images/loading.gif" alt="Loading indicator" />
 	</div>
 
 	<div id="report"></div>
@@ -335,7 +336,7 @@
 
 	<div class="govuk-form-group" id="saveCSVDiv">
 		<button id="saveCSVButton" class="govuk-button" data-module="govuk-button">Export to CSV</button>
-		<a download="report.txt" class="govuk-link" id="downloadlink">Download</a>
+		<a href="#" download="report.txt" class="govuk-link" id="downloadlink">Download</a>
 		<!--<button id="disableUsers" class="govuk-button" data-module="govuk-button">
 		Disable Selected Users
 	</button> -->
