--- a/views/reports.html
+++ b/views/reports.html
@@ -54,9 +54,8 @@
 						htmlOutput += '<thead class="govuk-table__head">';
 						htmlOutput += '<tr class="govuk-table__row">';
 						htmlOutput += '<th scope="col" class="govuk-table__header">Name</th>';
-						// htmlOutput +=
-						// 	'<th scope="col" class="govuk-table__header">Last Logon</th>';
-						htmlOutput += '<th scope="col" class="govuk-table__header">Disable</th>';
+						htmlOutput += '<th scope="col" class="govuk-table__header">Last Logon</th>';
+						//htmlOutput += '<th scope="col" class="govuk-table__header">Disable</th>';
 						htmlOutput += '</tr></thead>';
 
 						const userDetails = ['Username', 'distinguishedName', 'objectGuid',
